[package]
name = "rocketlab"
version = "1.0.0"
edition = "2021"
description = "Complete aerospace engineering toolkit — orbital mechanics, mission design, spacecraft dynamics, SGP4, Lambert solver, powered descent guidance"
license = "MIT"
authors = ["Nicola Spieser <redbasecap-buiss@users.noreply.github.com>"]
repository = "https://github.com/yourusername/rocketlab"
homepage = "https://github.com/yourusername/rocketlab"
documentation = "https://docs.rs/rocketlab"
readme = "README.md"
keywords = ["aerospace", "orbital-mechanics", "rocket", "spacecraft", "trajectory"]
categories = ["science", "simulation", "algorithms"]
exclude = ["target/", ".git/", ".github/", "*.md"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
nalgebra = "0.33"
chrono = "0.4"

[dev-dependencies]
approx = "0.5"
