[package]
name = "rocketlab"
version = "1.2.0"
edition = "2021"
description = "Complete aerospace engineering toolkit — orbital mechanics, mission design, spacecraft dynamics, SGP4, Lambert solver, powered descent guidance"
license = "MIT"
authors = ["Nicola Spieser <redbasecap-buiss@users.noreply.github.com>"]
repository = "https://github.com/yourusername/rocketlab"
homepage = "https://github.com/yourusername/rocketlab"
documentation = "https://docs.rs/rocketlab"
readme = "README.md"
keywords = ["aerospace", "orbital-mechanics", "rocket", "spacecraft", "trajectory"]
categories = ["science", "simulation", "algorithms"]
exclude = ["target/", ".git/", ".github/", "*.md"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
nalgebra = "0.33"
chrono = "0.4"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
approx = "0.5"

[lib]
crate-type = ["cdylib", "rlib"]
